# wealth_tracker

./: Cargo.toml  index.html  sw.js  wealth_tracker.js  wealth_tracker_bg.wasm
src/: app.rs  lib.rs  main.rs
src/models/: asset.rs  instrument.rs  investment.rs  liability.rs  mod.rs
src/models/assets/: cash.rs  loan.rs  mod.rs  real_estate.rs  tradable.rs
src/services/: portfolio.rs
src/ui/: mod.rs  plot_utils.rs
