[package]
name = "wealth_tracker"
version = "0.1.0"
authors = ["Rasmus Hogslätt"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui_plot = "0.30.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "serde", "js", "fast-rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
